--- a/style.css
+++ b/style.css
@@ -61,3 +61,14 @@ div.elem {
     border-radius: 5px;
     background-color: lightslategray;
 }
+
+.gombEsKep {
+    display: grid;
+    grid-template-columns: 50px 100px;
+    grid-template-columns: 100px 100px;
+}
+
+.nagyit {
+    width: 200px;
+    height: 200px;
+}
